--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>Ищу наставника</title>
+    
+    <meta name="description" content="«Ищу наставника» — проект, собирающий воедино все клубы, наставников, учителей."> 
+    <meta property="og:title" content="Ищу наставника" />
+    <meta property="og:image" content="https://storage.yandexcloud.net/mentor-search-img/og.jpg" />
+    <meta property="og:description" content="«Ищу наставника» — проект, собирающий воедино все клубы, наставников, учителей." />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Ищу наставника" />
+    <meta name="twitter:description" content="«Ищу наставника» — проект, собирающий воедино все клубы, наставников, учителей." />
+    <meta name="twitter:image" content="https://storage.yandexcloud.net/mentor-search-img/og.jpg" />
   </head>
 
   <body>
